rock-paper-scissors/styles.css
* {
  margin: 0;
  box-sizing: border-box;
}

body {
  width: 100%;
  height: 100%;
  padding: 2em;
  background-color: #111;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

header {
  display: flex;
  flex-wrap: wrap;
}

.title {
  margin: 1em auto;
  text-align: center;
  font-size: 4em;
  color: white;
}

/*--------------------------------------------*/

.gamesScore {
  width: 100%;
  height: fit-content;
  display: flex;
  flex-wrap: wrap;
  padding: 1em;
  gap: 1em;
}

.gamesTally {
  display: flex;
  justify-content: center;
  flex-direction: column;
  flex-grow: 1;
  border: 1px solid white;
  min-width: 300px;
  min-height: 15%;
  padding: 0.5em;
  color: white;
  text-align: center;
}

#gamesTallyScores {
  display: flex;
  justify-content: center;
  gap: 15px;
}

#gamesTallyScores h2 {
  font-size: 2em;
  margin-bottom: 3em;
}

#playerGameTally,
#computerGamesTally {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
}

#gamesTallyTitle {
  font-size: 2.5em;
}

#computerGameTallyTitle, #playerGameTallyTitle {
  font-size: 1em;
}

#computerGTScore, #playerGTScore {
  font-size: 3em;
}

.scoreMessage {
  display: flex;
  flex-grow: 4;
  gap: 1em;
  margin: auto;
  padding: 0 15px;
  vertical-align: middle;
  width: fit-content;
  height: 150px;
  line-height: 150px;
}
#player,
#ai {
  flex-grow: 1;
  text-align: center;
  font-size: 2em;
  color: white;
  font-weight: 600;
  /* border: 1px solid white; */
}

/*--------------------------------------------*/

.game {
  width: 100%;
  height: auto;
  padding: 5em;
  /* background-color: black; */
  text-align: center;
}

.resultGraphic {
  margin: auto;
  padding: 2em;
  display: flex;
  gap: 2em;
  justify-content: center;
  align-items: center;
  width: fit-content;
}
.spinEmoji {
  animation-name: spin;
  animation-duration: 5000ms;
  animation-iteration-count: 1;
  animation-timing-function: linear;
}
@keyframes spin {
    from {
        transform:rotate(0deg);
    }
    to {
        transform:rotate(360deg);
    }
}

#plResultGraph,
#aiResultGraph {
  height: 200px;
  width: 200px;
  font-size: 10em;
  color: gold;
}

.messages {
  display: flex;
  flex-direction: column;
  justify-content: center; 
  height: auto;
  width: fit-content;
  margin: 0.5em auto;
  font-size: 3em;
  color: white;
  text-align: center;
  vertical-align: middle;
  line-height: 150px;
}

#playAgain-btn {
  display: none;
  margin: auto;
  padding: 0 15px;
  background: #e74c3c;
  border-bottom: 15px solid #992317;
  border-radius: 10px;
  width: fit-content;
  height: 100px;
  font-size: 0.5em;
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 4px;
  color: whitesmoke;
  text-align: center;
  vertical-align: middle;
  line-height: 80px;
  cursor: pointer;
  user-select: none;
  transition: background 0.05s linear;
  transition: all 0.05s linear;
  transform: translate(-5px, -3px);
}

#playAgain-btn:active {
  border-bottom: 8px solid #992317;
  background-color: #d14536;
  transform: translateY(3px);
}

.buttonsContainer {
  display: block;
}

.buttons {
  margin-top: 0.5em;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  align-items: center;
}

.buttons .button {
  margin: 10px;
  background: #e74c3c;
  border-bottom: 15px solid #992317;
  border-radius: 50%;
  width: 150px;
  height: 150px;
  font-size: 1em;
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 4px;
  color: whitesmoke;
  text-align: center;
  vertical-align: middle;
  line-height: 135px;
  cursor: pointer;
  user-select: none;
  transition: background 0.05s linear;
  transition: all 0.05s linear;
  transform: translate(-5px, -3px);
}

.buttons .button:active {
  border-bottom: 8px solid #992317;
  background-color: #d14536;
  transform: translateY(3px);
}

